<resources>
    <string name="app_name">My Application</string>
    <string name="email">email</string>
    <string name="nom">nom</string>
    <string name="code_postal">Code postal</string>
    <string name="chevaux_fiscaux">Chevaux fiscaux</string>
    <string name="adresse">adresse</string>
    <string name="numero">numero</string>
    <string name="prenom">prenom</string>
    <string name="logout">Logout</string>
    <string name="frais_hors_forfait">Frais Hors Forfait</string>
    <string name="frais_forfait">Frais forfait</string>
</resources>